PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ReadOnlyConstant.par
ReadOnlyConstant {
const test = 0

seq main() : Int {
    return test
}
}