PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ReadOnlyConstant.par
ReadOnlyConstant {
const test = 0
seq main() : Void {
    test ++
}
}